--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="/">Bloccit</a>
+    <a class="navbar-brand" href="/">Blocipedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,6 +12,19 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
+        <% if(currentUser) { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/sign_out">Signed in as <%= currentUser.name %> (Sign out?)</a>
+        </li>
+        <% } else { %>
+        <!-- #2 -->
+        <li class="nav-item">
+          <a class="nav-link" href="/users/signup">Sign up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/sign_in">Sign in</a>
+        </li>
+        <% }%>
       </ul>
     </div>
   </div>
