cp5 - adding conditional buttons to create wikis

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -12,7 +12,11 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
+        <li class="nav-item"><a href="/wikis" class="nav-link">Browse Wikis</a></li>
         <% if(currentUser) { %>
+        <li class='nav-item'>
+          <a href="/wikis/new" class="nav-link">New Wiki</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/users/sign_out">Signed in as <%= currentUser.name %> (Sign out?)</a>
         </li>
