--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -10,7 +10,9 @@
     <% include ../static/partials/navbar.ejs %>
 
     <h1>Wikis</h1>
-
+    <% if(currentUser) { %>
+    <a href="/wikis/new" class="btn btn-success">New Wiki</a>
+    <% }%>
     <ul class="list-group">
       <!-- #1 -->
       <% wikis.forEach((wiki) => { %>
