cp6 - user roles complete

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -18,7 +18,7 @@
           <a href="/wikis/new" class="nav-link">New Wiki</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/users/sign_out">Signed in as <%= currentUser.name %> (Sign out?)</a>
+          <a class="nav-link" href="/users/sign_out">Signed in as <%= currentUser.email %> (Sign out?)</a>
         </li>
         <% } else { %>
         <!-- #2 -->
