--- a/src/views/static/partials/messages.ejs
+++ b/src/views/static/partials/messages.ejs
@@ -1,17 +1,21 @@
 <% if(messages.error || messages.notice) { %>
-  <div class="alert alert-<%= messages.error ? 'danger' : 'warning' %> alert-dismissible fade show" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    <% if(messages.error) { %>
-    Validation errors:
-    <ul>
-      <% messages.error.forEach((err) => { %>
-      <li><%= `${err.param} ${err.msg}` %></li>
-      <% }) %>
-    </ul>
+<div class="alert alert-<%= messages.error ? 'danger' : 'warning' %> alert-dismissible fade show" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  <% if(messages.error) { %>
+  Validation errors:
+  <ul>
+    <% messages.error.forEach((err) => { %>
+    <% if(err.name && err.name === 'SequelizeUniqueConstraintError') { %>
+    <li><%= `${err.errors[0].message}` %></li>
     <% } else { %>
-    <p><%= messages.notice %></p>
+    <li><%= `${err.param} ${err.msg}` %></li>
     <% } %>
-  </div>
+    <% }) %>
+  </ul>
+  <% } else { %>
+  <p><%= messages.notice %></p>
   <% } %>
+</div>
+<% } %>
