--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -17,6 +17,9 @@
         <li class='nav-item'>
           <a href="/wikis/new" class="nav-link">New Wiki</a>
         </li>
+        <li class='nav-item'>
+          <a href="/users/upgrade" class='nav-link'>Upgrade to Premium</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/users/sign_out">Signed in as <%= currentUser.email %> (Sign out?)</a>
         </li>
