--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -15,7 +15,7 @@
       <button type="submit" class="btn btn-danger">Delete</button>
     </form>
 
-    <p><%= wiki.body %></p>
+    <p><%- md.render(wiki.body) %></p>
   </main>
 
   <% include ../static/partials/baseScripts.ejs %>
