--- a/src/views/users/checkout.ejs
+++ b/src/views/users/checkout.ejs
@@ -10,103 +10,46 @@
   <% include ../static/partials/navbar.ejs %>
 
   <main class='container'>
-    <script src="https://js.stripe.com/v3/"></script>
+
     <% include ../static/partials/messages.ejs %>
     <h1>Account Upgrade for <%= currentUser.name %></h1>
 
     <form action="/users/<%= currentUser.id %>/upgradeAccount" method="POST" id="payment-form">
-      <div class="stripe-form-row">
-        <label for="card-element">
-          Credit or debit card
-        </label>
-        <div id="card-element" class="StripeElement StripeElement--empty">
+      <div class="group" id="example-1">
+        <!-- <fieldset>
+          <div class="stripe-form-row row">
+            <label for="name">Name</label>
+            <input id="name" type="text" placeholder="Jane Doe" required="" autocomplete="name">
+          </div>
+          <div class="stripe-form-row row">
+            <label for="email">Email</label>
+            <input id="email" type="email" placeholder="janedoe@gmail.com" required="" autocomplete="email">
+          </div>
+          <div class="stripe-form-row row">
+            <label for="phone">Phone</label>
+            <input id="phone" type="tel" placeholder="(941) 555-0123" required="" autocomplete="tel">
+          </div>
+        </fieldset> -->
+
+
+        <!-- <label for="card-element">Card</label> -->
+        <div id="card-element" class="StripeElement StripeElement--empty field">
           <!-- A Stripe Element will be inserted here. -->
         </div>
-
         <!-- Used to display form errors. -->
         <div id="card-errors" role="alert"></div>
+        <button>Pay $15 for Membership Upgrade</button>
       </div>
-
-      <button>Submit Payment</button>
     </form>
+
+
 
 
 
   </main>
   <% include ../static/partials/baseScripts.ejs %>
 
-  <script>
-    // Create a Stripe client.
-    var stripe = Stripe('pk_test_M3N5pxhcyMZ8bJckgz5MCl9700YeqLYI9G');
 
-    // Create an instance of Elements.
-    var elements = stripe.elements();
-
-    // Custom styling can be passed to options when creating an Element.
-    // (Note that this demo uses a wider set of styles than the guide below.)
-    var style = {
-      base: {
-        color: '#32325d',
-        fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-        fontSmoothing: 'antialiased',
-        fontSize: '16px',
-        '::placeholder': {
-          color: '#aab7c4'
-        }
-      },
-      invalid: {
-        color: '#fa755a',
-        iconColor: '#fa755a'
-      }
-    };
-
-    // Create an instance of the card Element.
-    var card = elements.create('card', { style: style });
-
-    // Add an instance of the card Element into the `card-element` <div>.
-    card.mount('#card-element');
-
-    // Handle real-time validation errors from the card Element.
-    card.addEventListener('change', function (event) {
-      var displayError = document.getElementById('card-errors');
-      if (event.error) {
-        displayError.textContent = event.error.message;
-      } else {
-        displayError.textContent = '';
-      }
-    });
-
-    // Handle form submission.
-    var form = document.getElementById('payment-form');
-    form.addEventListener('submit', function (event) {
-      event.preventDefault();
-
-      stripe.createToken(card).then(function (result) {
-        if (result.error) {
-          // Inform the user if there was an error.
-          var errorElement = document.getElementById('card-errors');
-          errorElement.textContent = result.error.message;
-        } else {
-          // Send the token to your server.
-          stripeTokenHandler(result.token);
-        }
-      });
-    });
-
-    // Submit the form with the token ID.
-    function stripeTokenHandler(token) {
-      // Insert the token ID into the form so it gets submitted to the server
-      var form = document.getElementById('payment-form');
-      var hiddenInput = document.createElement('input');
-      hiddenInput.setAttribute('type', 'hidden');
-      hiddenInput.setAttribute('name', 'stripeToken');
-      hiddenInput.setAttribute('value', token.id);
-      form.appendChild(hiddenInput);
-
-      // Submit the form
-      form.submit();
-    }
-  </script>
 </body>
 
 </html>
