--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -41,6 +41,13 @@
           <a href="/users/<%= currentUser.id %>/downgradeAccount" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
+
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">See Private Wikis</h5>
+          <a href="/wikis/priv" class="btn btn-primary">Private Wikis</a>
+        </div>
+      </div>
     </section>
     <% } %>
     <% } %>
