--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -22,6 +22,7 @@
         <label for="body">Wiki body</label>
         <textarea rows="4" class="form-control" name="body" placeholder="Enter Description"><%= wiki.body %></textarea>
       </div>
+      <% if(currentUser && (currentUser.role === 1 || currentUser.role === 2)) { %>
       <label for="private">Private Wiki?</label>
       <div class="form-group btn-group btn-group-toggle" data-toggle='buttons'>
         <label class='btn btn-secondary active'>
@@ -31,6 +32,7 @@
           <input type="radio" name="private" id="private2" value='true'>Yes
         </label>
       </div>
+      <% } %>
       <div><button type="submit" class="btn btn-primary">Update</button></div>
     </form>
   </main>
