--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -20,6 +20,8 @@
         <label for="body">Wiki body</label>
         <textarea rows="4" class="form-control" name="body" placeholder="Enter Wiki body"></textarea>
       </div>
+
+      <% if(currentUser && (currentUser.role === 1 || currentUser.role === 2)) { %>
       <label for="private">Private Wiki?</label>
       <div class="form-group btn-group btn-group-toggle" data-toggle='buttons'>
         <label class='btn btn-secondary active'>
@@ -29,6 +31,7 @@
           <input type="radio" name="private" id="private2" value='true'>Yes
         </label>
       </div>
+      <% } %>
       <div><button type="submit" class="btn btn-primary">Submit</button></div>
     </form>
   </main>
