--- a/src/views/users/signup.ejs
+++ b/src/views/users/signup.ejs
@@ -14,7 +14,7 @@
     <h3>Create an account below:</h3>
     <div class="row">
       <div class="col-md-8">
-        <form method="POST" action="/users">
+        <form method="POST" action="/users/signup">
           <div class="form-group">
             <label>Name:</label>
             <input type="text" name="name" placeholder="Enter Name" class="form-control" />
