--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -22,6 +22,8 @@
         <label for="body">Wiki body</label>
         <textarea rows="4" class="form-control" name="body" placeholder="Enter Description"><%= wiki.body %></textarea>
       </div>
+      <!-- TODO: markdown preview? -->
+
       <% if(currentUser && (currentUser.role === 1 || currentUser.role === 2)) { %>
       <label for="private">Private Wiki?</label>
       <div class="form-group btn-group btn-group-toggle" data-toggle='buttons'>
@@ -31,6 +33,13 @@
         <label class='btn btn-secondary'>
           <input type="radio" name="private" id="private2" value='true'>Yes
         </label>
+      </div>
+      <div>
+        <!-- FIXME: add header below inside conditional -->
+        <h2>Add collaborators</h2>
+        <% if(currentUser.isPremium() && wiki.private == true ) { %>
+        <%- include('../users/index', {wiki: wiki}) %>
+        <% } %>
       </div>
       <% } %>
       <div><button type="submit" class="btn btn-primary">Update</button></div>
