--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -35,9 +35,8 @@
         </label>
       </div>
       <div>
-        <!-- FIXME: add header below inside conditional -->
+        <% if((currentUser.isPremium() || currentUser.isAdmin()) && wiki.private == true ) { %>
         <h2>Add collaborators</h2>
-        <% if(currentUser.isPremium() && wiki.private == true ) { %>
         <%- include('../users/index', {wiki: wiki}) %>
         <% } %>
       </div>
