--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -6,9 +6,10 @@
 </head>
 
 <body>
+  <% include ../static/partials/navbar.ejs %>
   <main class="container">
-    <% include ../static/partials/navbar.ejs %>
 
+    <% include ../static/partials/messages.ejs %>
     <h1>Wikis</h1>
     <% if(currentUser) { %>
     <a href="/wikis/new" class="btn btn-success">New Wiki</a>
