--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -9,6 +9,7 @@
   <% include ../static/partials/navbar.ejs %>
 
   <main class="container">
+    <% include ../static/partials/messages.ejs %>
     <h1>New Wiki</h1>
     <!-- #1 -->
     <form action="/wikis/create" method="post">
