--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -9,6 +9,7 @@
   <% include ../static/partials/navbar.ejs %>
 
   <main class="container">
+    <% include ../static/partials/messages.ejs %>
     <h1><%= wiki.title %></h1>
     <% if (currentUser) { %>
     <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
