cp11 update. implement authorizer & fix styles

--- a/src/views/users/checkout.ejs
+++ b/src/views/users/checkout.ejs
@@ -30,7 +30,7 @@
         </div>
         <!-- Used to display form errors. -->
         <div id="card-errors" role="alert"></div>
-        <button>Pay $15 for Membership Upgrade</button>
+        <button class='checkout'>Pay $15 for Membership Upgrade</button>
       </div>
     </form>
 
