--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -15,7 +15,7 @@ div#card-element {
   max-width: 50px;
 } */
 
-button {
+button.checkout {
   float: left;
   display: block;
   background: #666EE8;
