--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -10,8 +10,8 @@
 
   <main class="container">
     <% include ../static/partials/messages.ejs %>
-    <h1><%= wiki.title %></h1>
-    <% if (currentUser) { %>
+    <h1><%= wiki.title %> - <%= wiki.User.name %></h1>
+    <% if (currentUser && (currentUser.id === wiki.User.id)) { %>
     <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
     <form style="display:initial" action="/wikis/<%#= wiki.id %>/destroy" method="post">
       <button type="submit" class="btn btn-danger">Delete</button>
